test/expected/include-err-01.out
include "data/not_found.cdeclrc"
        ^
data/include-err-2.cdeclrc:2,9: error: could not resolve path
